project1/test/test_1_r19.spl
int test_1_r19()
{
  int a = -0x0a;
}
